fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -844,18 +844,17 @@ body {
   text-align: center; }
 
 #coversContainer {
-  justify-content: center; }
+  text-align: center; }
 
 #mainLibrary .cover {
-  display: inline-block;
-  text-align: center; }
+  display: inline; }
 
 #mainLibrary .books img {
   margin-left: 1em;
   margin-top: 1em;
   margin-bottom: 1em;
   margin-right: 1em;
-  text-align: center; }
+  display: inline; }
 
 #mainLibrary .cover img {
   margin-left: 1em;
@@ -865,7 +864,7 @@ body {
   height: 18em; }
 
 #mainLibrary .books {
-  justify-content: center; }
+  text-align: center; }
 
 /*WIDE SCREEN*/
 @media only screen and (min-width: 1001px) {
@@ -948,9 +947,9 @@ body {
   .popup {
     width: 80%; }
 
-  .showOverlay:checked ~ #blueBlock,
-  .showOverlay:checked ~ #menu,
-  .showOverlay:checked ~ #navContainer {
+  .noNAV:checked ~ #blueBlock,
+  .noNAV:checked ~ #menu,
+  .noNAV:checked ~ #navContainer {
     visibility: hidden;
     opacity: 0;
     transition: .25s ease-in-out; } }
