--- a/scss/_pages/_library.scss
+++ b/scss/_pages/_library.scss
@@ -9,13 +9,11 @@
 }
 
 #coversContainer {
-    //display: flex;
-    justify-content: center;
+    text-align: center;
 }
 
 #mainLibrary .cover {
-    display: inline-block;
-    text-align: center;
+    display: inline;
 }
 
 #mainLibrary .books img {
@@ -23,7 +21,7 @@
     margin-top: 1em;
     margin-bottom: 1em;
     margin-right: 1em;
-    text-align: center;
+    display: inline;
 }
 
 #mainLibrary .cover img {
@@ -35,8 +33,7 @@
 }
 
 #mainLibrary .books {
-    //sdisplay: flex;
-    justify-content: center;
+    text-align: center;
 }
 
 
@@ -152,9 +149,9 @@
     .popup {
         width: 80%; //make 80
     }
-    .showOverlay:checked ~ #blueBlock,
-    .showOverlay:checked ~ #menu,
-    .showOverlay:checked ~ #navContainer {
+    .noNAV:checked ~ #blueBlock,
+    .noNAV:checked ~ #menu,
+    .noNAV:checked ~ #navContainer {
         visibility: hidden;
         opacity: 0;
         transition: .25s ease-in-out;
